// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeaderDropdown/MenuItemToggleMuteChannel should be hidden if the channel type is DM 1`] = `
<MenuItemAction
  onClick={[Function]}
  show={false}
  text="Mute Channel"
/>
`;

exports[`components/ChannelHeaderDropdown/MenuItemToggleMuteChannel should match snapshot 1`] = `
<MenuItemAction
  onClick={[Function]}
  show={true}
  text="Mute Channel"
/>
`;
